<resources>
    <string name="app_name">ContactList</string>
    <string name="my_String">Settings</string>
    <string name="emailAddressText">Email:</string>
    <string name="contactListDesc">Button to display a list of contacts.</string>
    <string name="mapDesc">links to map activity</string>
    <string name="settingsDesc">links to settings activity</string>
    <string name="toggleButtonSaveText">Save</string>
    <string name="scrollDesc">Scroll view that contacts contact information</string>
    <string name="contactTextViewName">Contact</string>
    <string name="cellTextViewName">Cell</string>
    <string name="homeTextViewName">Home</string>
    <string name="addressTextViewName">Address</string>
    <string name="editNameHint">Name</string>
    <string name="editEmailHint">Enter Email Address</string>
    <string name="editAddressHint">Enter Street Address</string>
    <string name="editCityHint">City</string>
    <string name="editStateHint">State</string>
    <string name="editZipcodeHint">Zipcode</string>
    <string name="birthdayText">Birthday: </string>
    <string name="birthdayButtonText">Change</string>
    <string name="placeHolderDate">01/01/1970</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="buttonSelectText">Select</string>
    <string name="sortContactText">"Sort Contacts By: "</string>
    <string name="radioNameText">Name</string>
    <string name="radioCityText">City</string>
    <string name="radioBirthdayText">Birthday</string>
    <string name="sortOrderByText">Sort Order:</string>
    <string name="radioAscendingText">Ascending</string>
    <string name="radioDescending">Descending</string>
    <string name="Button_Delete">Delete</string>
    <string name="button_new">New</string>
    <string name="getCoordinatesString">Get Coordinates</string>
    <string name="LongitudeString">Longitude</string>
    <string name="AccuracyString">Accuracy</string>
    <string name="LatitudeString">Latitude</string>
    <string name="getCoordinates">Get Coordinates</string>
    <string name="emptyText">None</string>
    <string name="batteryDefault">100%</string>
</resources>