<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/contactlistButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/contactListDesc"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/mapDesc"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/settingsDesc"
            android:scaleType="centerInside"
            android:scaleX="1"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/toggleButtonSaveText"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/toggleButtonSaveText"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:autofillHints=""
                    android:ems="14"
                    android:hint="@string/editNameHint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/contactTextViewName"
                    app:layout_constraintBottom_toTopOf="@+id/editName"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="16"
                    android:hint="@string/editAddressHint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAddress"
                    tools:ignore="TextContrastCheck"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:ems="2"
                    android:hint="@string/editStateHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLength="2"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toEndOf="@+id/editCity"
                    app:layout_constraintTop_toBottomOf="@+id/editAddress"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/addressTextViewName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editZipcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:ems="5"
                    android:hint="@string/editZipcodeHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLength="5"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toEndOf="@+id/editState"
                    app:layout_constraintTop_toBottomOf="@+id/editAddress"
                    tools:ignore="TextContrastCheck"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="9"
                    android:hint="@string/editCityHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editAddress"
                    android:autofillHints="" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/homeTextViewName"
                    app:layout_constraintBottom_toTopOf="@+id/editHome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="8"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/editCell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textCell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:imeOptions="actionNext"
                    android:text="@string/cellTextViewName"
                    app:layout_constraintBottom_toTopOf="@+id/editCell"
                    app:layout_constraintStart_toStartOf="@+id/editCell"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/editCell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:autofillHints=""
                    android:ems="8"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:minHeight="48dp"
                    android:nextFocusDown="@id/editEMail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editHome"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textEMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:imeOptions="actionNext"
                    android:text="@string/emailAddressText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editEMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="16"
                    android:hint="@string/editEmailHint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textEMail" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="60dp"
                    android:text="@string/birthdayButtonText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:imeOptions="actionNext"
                    android:text="@string/placeHolderDate"
                    app:layout_constraintStart_toEndOf="@+id/textBday"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textBday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/birthdayText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>