<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_contact_map"
    tools:context=".ContactMapActivity">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="623dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/contactlistButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/contactListDesc"
            android:keepScreenOn="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/mapDesc"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/settingsDesc"
            android:scaleType="centerInside"
            android:scaleX="1"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>